Fix table overflow

--- a/css/tableOverflow.css
+++ b/css/tableOverflow.css
@@ -2,3 +2,6 @@
 	width: 500px;
 	overflow: auto;
 }
+.coursesplus-tableOverflowContainerBig {
+	width: 580px;
+}
